src/pylint/snapshots/ruff__pylint__tests__PLR1722_consider_using_sys_exit_3.py.snap
---
source: src/pylint/mod.rs
expression: checks
---
- kind:
    UseSysExit: quit
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 4
  fix:
    location:
      row: 4
      column: 0
    end_location:
      row: 4
      column: 4
    content: exit
    message: ~
  parent: ~
- kind:
    UseSysExit: quit
  location:
    row: 9
    column: 4
  end_location:
    row: 9
    column: 8
  fix:
    location:
      row: 9
      column: 4
    end_location:
      row: 9
      column: 8
    content: exit
    message: ~
  parent: ~

