src/pylint/snapshots/ruff__pylint__tests__PLR1722_consider_using_sys_exit_5.py.snap
---
source: src/pylint/mod.rs
expression: checks
---
- kind: ConsiderUsingSysExit
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 4
  fix:
    content: exit
    location:
      row: 4
      column: 0
    end_location:
      row: 4
      column: 4
- kind: ConsiderUsingSysExit
  location:
    row: 9
    column: 4
  end_location:
    row: 9
    column: 8
  fix:
    content: exit
    location:
      row: 9
      column: 4
    end_location:
      row: 9
      column: 8

