src/pylint/snapshots/ruff__pylint__tests__PLR1722_consider_using_sys_exit_6.py.snap
---
source: src/pylint/mod.rs
expression: checks
---
- kind: ConsiderUsingSysExit
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 4
  fix: ~
- kind: ConsiderUsingSysExit
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 4
  fix: ~

