src/pylint/snapshots/ruff__pylint__tests__PLR2004_magic_value_comparison.py.snap
---
source: src/pylint/mod.rs
expression: diagnostics
---
- kind:
    MagicValueComparison: "10"
  location:
    row: 6
    column: 3
  end_location:
    row: 6
    column: 18
  fix: ~
  parent: ~
- kind:
    MagicValueComparison: "2"
  location:
    row: 29
    column: 3
  end_location:
    row: 29
    column: 12
  fix: ~
  parent: ~
- kind:
    MagicValueComparison: "'Hunter2'"
  location:
    row: 44
    column: 3
  end_location:
    row: 44
    column: 30
  fix: ~
  parent: ~
- kind:
    MagicValueComparison: "3.141592653589793"
  location:
    row: 50
    column: 3
  end_location:
    row: 50
    column: 40
  fix: ~
  parent: ~
- kind:
    MagicValueComparison: "b'something'"
  location:
    row: 59
    column: 3
  end_location:
    row: 59
    column: 29
  fix: ~
  parent: ~

