src/pylint/snapshots/ruff__pylint__tests__import_aliasing.py.snap
---
source: src/pylint/mod.rs
expression: checks
---
- kind:
    ConsiderUsingFromImport:
      - os
      - path
  location:
    row: 8
    column: 7
  end_location:
    row: 8
    column: 22
  fix: ~
- kind:
    ConsiderUsingFromImport:
      - foo.bar
      - foobar
  location:
    row: 10
    column: 7
  end_location:
    row: 10
    column: 31
  fix: ~

